# pipekit

./: .gitignore  Readme.md  pyproject.toml  setup.py
examples/: hello_pipeline.py  parallel_pipeline.py  test_celery.py  test_db.py
pipekit.egg-info/: PKG-INFO  SOURCES.txt
pipekit/api/: routes.py
pipekit/cli/: cli.py
pipekit/core/: dag.py  state.py  task.py
pipekit/db/: models.py
pipekit/scheduler/: scheduler.py
pipekit/tasks/: etl_tasks.py  parallel_tasks.py
pipekit/worker/: worker.py
